# abc-mobile-robotics.github.io

./: .gitignore  README.md  _config.yml  index.md  m1.md  m2.md  test.txt  wolf_runaway_node.py
Project/: index.md  m1.md
_includes/: custom-head.html  head.html  head_custom.html  mathjax.html
_layout/: default.html
assets/: main.scss  milestone1.drawio
assets/images/: rabbit.avif
assets/js/: mathjax-script-type.js
docs/: Gemfile  _config.yml  index.markdown
docs/_posts/: hi.markdown
docs/pages/: test.md
project/: rabbit_chaser_node.py
project/code/: rabbit_chaser.launch.py  startup.sh
project/code/game_referee/: package.xml  setup.py
project/code/game_referee/config/: referee_params.yaml
project/code/game_referee/game_referee/: game_referee_node.py
project/code/geofence_manager/: package.xml  setup.py
project/code/geofence_manager/config/: rabbit_geofence.yaml  wolf_geofence.yaml
project/code/geofence_manager/geofence_manager/: geofence_node.py
project/code/maps/: living_room.pgm  living_room.yaml
project/code/rabbit_behavior/: package.xml  setup.cfg  setup.py
project/code/rabbit_behavior/config/: rabbit_params.yaml
project/code/rabbit_behavior/rabbit_behavior/: rabbit_fsm.py
project/code/turtlebot4_geofence/: README.md  package.xml  setup.cfg  setup.py
project/code/turtlebot4_geofence/config/: geofence_params.yaml
project/code/turtlebot4_geofence/launch/: geofence.launch.py
project/code/turtlebot4_geofence/turtlebot4_geofence/: geofence_node.py
project/code/wolf_behavior/: package.xml  setup.py
project/code/wolf_behavior/config/: wolf_params.yaml
project/code/wolf_behavior/wolf_behavior/: wolf_fsm.py
project/code/wolf_rabbit_bringup/: package.xml  setup.py
project/code/wolf_rabbit_bringup/launch/: game.launch.py
project/code/wolf_rabbit_bringup/wolf_rabbit_bringup/: dummy_entry.py
project/code/wolf_rabbit_game/: README.md  package.xml  setup.cfg  setup.py
project/code/wolf_rabbit_game/config/: carrot.yaml  rabbit.yaml  rabbit_geofence.yaml  referee.yaml  wolf.yaml  wolf_geofence.yaml  yolo.yaml
project/code/wolf_rabbit_game/launch/: game.launch.py
project/code/wolf_rabbit_game/wolf_rabbit_game/: carrot_manager.py  geofence_node.py  rabbit_fsm.py  referee_node.py  utils.py  wolf_fsm.py  yolo_detector.py
project/code/wolf_rabbit_game_wolfmode/: package.xml  setup.cfg  setup.py
project/code/wolf_rabbit_game_wolfmode/wolf_rabbit_game_wolfmode/: wolf_fsm.py
project/code/wolf_rabbit_msgs/: CMakeLists.txt  package.xml
project/code/wolf_rabbit_msgs/msg/: GameState.msg  GeofenceStatus.msg  TargetDetection.msg
project/code/yolo_perception/: package.xml  setup.py
project/code/yolo_perception/config/: yolo_params.yaml
project/code/yolo_perception/yolo_perception/: yolo_detector.py
wolf_rabbit_yolo/dataset/: dataset.yaml
wolf_rabbit_yolo/dataset/labels/: train.cache  val.cache
wolf_rabbit_yolo/dataset/labels/test/: test_00000.txt  test_00001.txt  test_00002.txt  test_00003.txt  test_00004.txt  test_00005.txt  test_00006.txt  test_00007.txt  test_00008.txt  test_00009.txt  test_00010.txt  test_00011.txt  test_00012.txt  test_00013.txt  test_00014.txt  test_00015.txt  test_00016.txt  test_00017.txt  test_00018.txt  test_00019.txt  test_00020.txt  test_00021.txt  test_00022.txt  test_00023.txt  test_00024.txt  test_00025.txt  test_00026.txt  test_00027.txt  test_00028.txt  test_00029.txt  test_00030.txt  test_00031.txt  test_00032.txt  test_00033.txt  test_00034.txt  test_00035.txt  test_00036.txt  test_00037.txt  test_00038.txt  test_00039.txt  (+160 more)
wolf_rabbit_yolo/runs/wolf_rabbit_signs_v1/: args.yaml
wolf_rabbit_yolo/runs/wolf_rabbit_signs_v2/: args.yaml  results.csv
wolf_rabbit_yolo/scripts/: generate_sign_dataset.py  test_webcam_yolo.py
(+2800 files in other folders)
