<?xml version="1.0"?>
<package format="3">
  <name>yolo_perception</name>
  <version>0.0.1</version>
  <description>YOLO-based detection for wolf, rabbit, and carrot.</description>
  <maintainer email="team@example.com">Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>wolf_rabbit_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
